--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -47,7 +47,7 @@
   </div>
   <div class="container" style="padding-top: 0;">
   	<div class="links terms_of_use">
-		<a href="" onclick="showPopup('terms', '{% url pingpong.views.terms %}', ''); return false;">Terms of use</a>
+		<a href="{% url pingpong.views.terms %}">Terms of use</a>
 	</div>
 	<a href="" onclick="showPopup('signup', '{% url pingpong.views.signup %}', 'name'); return false;" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
   	<div class="core_clear"></div>
