linked up home logo

--- a/pingpong/templates/terms.html
+++ b/pingpong/templates/terms.html
@@ -23,7 +23,7 @@
   			{% endif %}
   			<div class="core_clear"></div>
   		</span>
-  		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" />
+  		<a href="{% url pingpong.views.index %}"><img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" /></a>
   	</div>
   </div>
   <div class="container core_privacy">
