--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -23,15 +23,18 @@ td { vertical-align: top; }
 /* =========================================
     ADD SCORES POPUP
    ========================================= */
+.add_container { position: relative; }
 .add_enter_scores { margin: 23px auto 0 auto; text-align: center; width: 300px; }
 .add_enter_scores img { float: left; margin-right: 10px; }
 .add_enter_scores span { float: left; margin-top: 12px; color: #999; }
 .add_enter_scores span a, .add_enter_scores span a:hover { color: #999; }
+.add_exact { position: absolute; right: 25px; top: 9px; }
 .add_header { margin-bottom: 13px; }
 .add_player { float: left; padding: 5px 7px; cursor: pointer; font-size: 11px; margin: 0 11px 6px 0; font-weight: bold; width: 105px; text-align: left; border: 1px solid #DFDCD9; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFF), to(#F1F0ED)); background-image: -moz-linear-gradient(0% 100% 90deg,#F1F0ED, #FFF); -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px; }
 .add_player.selected, .add_player:hover { border: 1px solid #039BCE;  cursor: default; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#03AFE9), to(#0280AB)); background-image: -moz-linear-gradient(0% 100% 90deg,#0280AB, #03AFE9); }
 .add_player.selected a, .add_player:hover a { color: #FFF; cursor: default; }
 .add_player a { color: #8A8A8A; text-decoration: none; }
+.add_preset { color: #8A8A8A; display: block; font-size: 14px !important; padding: 4px 7px 5px 7px; cursor: pointer; font-size: 11px; margin: 0 11px 6px 0; font-weight: bold; text-align: left; border: 1px solid #DFDCD9; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFF), to(#F1F0ED)); background-image: -moz-linear-gradient(0% 100% 90deg,#F1F0ED, #FFF); -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px; }
 .add_score { font-size: 100px; font-family: Arial, Helvetica, sans-serif; line-height: 80px; font-weight: bold; color: #666; text-shadow: 2px 2px 2px #999; }
 .add_score_header { margin: 13px 0; }
 .add_slider { padding: 16px 27px 10px 10px; }
@@ -160,6 +163,7 @@ body#home .terms_of_use { font-size: 14px; }
 .nav_add span { display:block; position:absolute; left:12px; top:7px; z-index:1; width:109px; height:32px;  margin:0; padding:0; }
 .nav_doubles span { display:block; position:absolute; left:12px; top:7px; z-index:1; width:90px; height:32px;  margin:0; padding:0; }
 .nav_down, .nav_up:hover { position: relative;  padding: 10px 14px !important; cursor:default; border-top: 1px solid #1B1B1B; border-left: 1px solid #1B1B1B; border-bottom: 1px solid #313131; border-right: 1px solid #313131; color: #A0A0A0; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#222222), to(#2A2A2A)); background-image: -moz-linear-gradient(0% 100% 90deg,#2A2A2A, #222222); -moz-box-shadow: #1B1B1B 2px 2px 2px 0 inset; text-shadow: 1px 1px 3px #1B1B1B; }
+.nav_links { margin: 5px 0 0 5px; padding: 5px 0 0 5px; border-left: 1px solid #444; }
 .nav a.links { text-decoration: none; margin: 10px 0 0 23px; padding: 0; font-size: 18px; }
 .nav_singles span { display:block; position:absolute; left:12px; top:7px; z-index:1; width:83px; height:32px;  margin:0; padding:0; }
 .nav_trial { text-align: right; margin: 11px 0 0 0; font-size: 16px; color: #666; }
