--- a/pingpong/templates/addscore.html
+++ b/pingpong/templates/addscore.html
@@ -35,7 +35,15 @@
 				{% endif %}
 				<div class="core_clear"></div>
 				<img src="{{ MEDIA_URL }}pingpong/images/header_team_one_score.gif" height="11" width="106" class="add_score_header" />
-				<div id="teamOneScore" class="add_score">0</div>
+				<div class="core_clear"></div>
+				<div class="add_container">
+					<div class="add_exact">
+						<div class="add_preset" onclick="presetScore(11, 'One');">11</div>
+						<div class="add_preset" onclick="presetScore(21, 'One');">21</div>
+					</div>
+					<div id="teamOneScore" class="add_score">0</div>
+				</div>
+				
 				<div class="add_slider">
 					<div id="teamOneSlider"></div>
 				</div>
@@ -52,7 +60,13 @@
 				{% endif %}
 				<div class="core_clear"></div>
 				<img src="{{ MEDIA_URL }}pingpong/images/header_team_two_score.gif" height="11" width="106" class="add_score_header" />
-				<div id="teamTwoScore" class="add_score">0</div>
+				<div class="add_container">
+					<div class="add_exact">
+						<div class="add_preset" onclick="presetScore(11, 'Two');">11</div>
+						<div class="add_preset" onclick="presetScore(21, 'Two');">21</div>
+					</div>
+					<div id="teamTwoScore" class="add_score">0</div>
+				</div>
 				<div class="add_slider">
 					<div id="teamTwoSlider"></div>
 				</div>
