--- a/pingpong/templates/addscore.html
+++ b/pingpong/templates/addscore.html
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 			<div class="core_clear"></div>
-			<div class="add_enter_scores"><a href="" onclick="javascript:submitScores(); return false;"><img src="{{ MEDIA_URL }}pingpong/images/btn_enter_scores.jpg" width="211" height="45" /></a><span>or <a href="javascript: hideShade();">cancel</a></span></div>
+			<div class="add_enter_scores"><a href="" onclick="javascript:submitScores(); return false;"><img src="{{ MEDIA_URL }}pingpong/images/btn_enter_scores.jpg" width="211" height="45" /></a><span>or <a href="javascript: hideShade();" class="popup_cancel">cancel</a></span></div>
 			<div class="core_clear"></div>
 		</div>
 		</form>
