--- a/pingpong/templates/base.html
+++ b/pingpong/templates/base.html
@@ -21,4 +21,16 @@
 	<div id="popup_container"></div>
 {% block content %}
 {% endblock %}
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-16365298-1");
+pageTracker._setDomainName(".pingpongninja.com");
+pageTracker._trackPageview();
+} catch(err) {}
+</script>
+</body>
 </html>
