--- a/pingpong/templates/settings.html
+++ b/pingpong/templates/settings.html
@@ -33,7 +33,11 @@
 					<tr bgcolor="#{% cycle 'FFF' 'F5F5F1' %}" onmouseover="this.style.backgroundColor='#E6F4FB';" onmouseout="this.style.backgroundColor='#{% cycle 'FFF' 'F5F5F1' %}';">
 						<td class="sell_desc">
 							<div id="{{ p.key }}_name" onclick="settingsEdit('{{ p.key }}');">{{ p.name }}</div>
-							<div id="{{ p.key }}_input" style="display: none;"><input type="text" id="{{ p.key }}" value="{{ p.name }}" class="pads validate[required]" style="margin-bottom: 0;" /></div>
+							<div id="{{ p.key }}_input" style="display: none;">
+							  <input type="text" id="{{ p.key }}" value="{{ p.name }}" class="core_left pads validate[required]" style="margin-bottom: 0;" />
+							  <div id="{{ p.key }}_error" class="core_error"></div>
+							  <div class="core_clear"></div>
+							</div>
 						</td>
 						<td class='right'><a href='' id="{{ p.key }}_edit" onclick="settingsEdit('{{ p.key }}'); return false;">edit</a> <div class="core_vline"></div> <a href="" onclick="deletePlayer('{{ p.name }}', '{{ p.key }}'); return false;">delete</a></td>
 					</tr>
