added about us page

--- a/pingpong/templates/footer.html
+++ b/pingpong/templates/footer.html
@@ -1,5 +1,6 @@
 <div class="container" style="padding-top: 0;">
 	<div class="links terms_of_use">
+		<a href="{% url pingpong.views.about %}">Our story</a>
 		<a href="{% url pingpong.views.contact %}">Contact us</a>
 		<a href="{% url pingpong.views.terms %}">Terms of use</a>
 		<a href="{% url pingpong.views.privacy %}">Privacy policy</a>
