--- a/pingpong/templates/about.html
+++ b/pingpong/templates/about.html
@@ -22,13 +22,17 @@
           </span> <a href="{% url pingpong.views.index %}"><img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" /></a> </div>
 </div>
 <div class="container core_privacy">
-     <div class="core_content core_radius6">
-        <h1>Our story</h1>
-		<img src="{{ MEDIA_URL }}pingpong/images/david-martin.jpg" width="218" height="110" align="right" hspace="5" />
-		<img src="{{ MEDIA_URL }}pingpong/images/james-dennes.jpg" width="218" height="110" align="right" hspace="5" />
-		<p>PingPongNinja was developed and designed by <a href="http://jdennes.github.com/">James Dennes</a>, and Dave Martin out of Sydney Australia.  James and Dave both work at <a href="http://www.campaingmonitor.com">CampaingMonitor.com</a>.  Initially just an internal app used by the crew at Campaign Monitor, James and Dave thought, "Hey, a lot of companies would probably enjoy this".  So they set off to develop a version that could host multiple accounts.</p>
-		<p>The app is hosted through Google App Engine and relies on the <a href="http://code.google.com/p/app-engine-patch/">app-engine-patch</a> and <a href="http://www.jquery.com">jQuery</a> for it's functionality.  </p>
-     </div>
+  <div class="core_content core_radius6">
+  <h1>Our story</h1>
+  <img src="{{ MEDIA_URL }}pingpong/images/david-martin.jpg" width="218" height="110" align="right" hspace="5" />
+  <img src="{{ MEDIA_URL }}pingpong/images/james-dennes.jpg" width="218" height="110" align="right" hspace="5" />
+  <p>PingPongNinja was developed and designed by <a href="http://jdennes.github.com/">James Dennes</a>, 
+    and Dave Martin out of Sydney Australia, who both work on <a href="http://www.campaignmonitor.com">Campaign Monitor</a>.
+  <p>The Campaign Monitor crew take their ping pong seriously and have had an internal ping pong ranking app for some time.</p>
+  <p>James and Dave one day thought to themselves, "Hey, a lot of other companies would probably enjoy this!" So they created 
+    a new version of their ping pong ranking app for use by anyone - PingPongNinja!</p>
+  <p>PingPongNinja is powered by <a href="http://www.djangoproject.com/">Django</a> on <a href="http://code.google.com/appengine/">Google App Engine</a>.</p>
+  </div>
 </div>
 {% include 'footer.html' %}
 {% endblock %}
